--- a/Notebooks2023/Argilla_add_records_dataset-v1.ipynb
+++ b/Notebooks2023/Argilla_add_records_dataset-v1.ipynb
@@ -216,11 +216,11 @@
         "hf_dataset"
       ],
       "metadata": {
-        "id": "JfIORbdif26R",
-        "outputId": "69f24be9-6705-4dff-9797-cb281931537c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JfIORbdif26R",
+        "outputId": "69f24be9-6705-4dff-9797-cb281931537c"
       },
       "id": "JfIORbdif26R",
       "execution_count": 29,
@@ -260,12 +260,12 @@
         "df['train'][0]['page_content']"
       ],
       "metadata": {
-        "id": "RbrpzIeGe84O",
-        "outputId": "19bc9a15-07bf-4c1d-e262-dd1a8bd571a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
-        }
+        },
+        "id": "RbrpzIeGe84O",
+        "outputId": "19bc9a15-07bf-4c1d-e262-dd1a8bd571a9"
       },
       "id": "RbrpzIeGe84O",
       "execution_count": 25,
@@ -305,7 +305,7 @@
         "id": "t0F8WUnldXYZ"
       },
       "id": "t0F8WUnldXYZ",
-      "execution_count": 45,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -314,19 +314,19 @@
         "dataset.add_records(records)"
       ],
       "metadata": {
-        "id": "Et1HY8eWo2l5",
-        "outputId": "bb91cb1c-33fa-4352-97e3-ae6c8ed3e308",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33,
           "referenced_widgets": [
-            "900e963e1f7a4aa5a6d9b0e88120136f",
-            "cb0cfc4e535d493cb21128416f285460"
+            "43df5cb20c0a4824b66609161a0cedce",
+            "bf9595a90b774e729585d78369fcbd65"
           ]
-        }
+        },
+        "id": "Et1HY8eWo2l5",
+        "outputId": "2510096f-627a-4d3c-9e28-41ef1a002271"
       },
       "id": "Et1HY8eWo2l5",
-      "execution_count": 46,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "display_data",
@@ -337,7 +337,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "900e963e1f7a4aa5a6d9b0e88120136f"
+              "model_id": "43df5cb20c0a4824b66609161a0cedce"
             }
           },
           "metadata": {}
@@ -366,6 +366,114 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "CAUTION: all records will get updated"
+      ],
+      "metadata": {
+        "id": "iFLlmIr4ti7V"
+      },
+      "id": "iFLlmIr4ti7V"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load the dataset\n",
+        "modified_records = []\n",
+        "# Loop through the records and make modifications\n",
+        "for record in dataset.records:\n",
+        "    # e.g. adding/modifying a metadata field and vectors\n",
+        "    record.metadata[\"my_metadata\"] = \"new_metadata\"\n",
+        "    # e.g. removing all suggestions and responses\n",
+        "    record.suggestions = []\n",
+        "    record.responses = []\n",
+        "    modified_records.append(record)\n",
+        "\n",
+        "dataset.update_records(modified_records)"
+      ],
+      "metadata": {
+        "id": "wm2dVfZ-thrO",
+        "outputId": "2f015297-0b60-4f97-d50d-95b89daf0d44",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33,
+          "referenced_widgets": [
+            "99cbdc302546412aa5c6e3afdb023163",
+            "76b34f4e76c04c4b93823b466b1dc53a"
+          ]
+        }
+      },
+      "id": "wm2dVfZ-thrO",
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Output()"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "99cbdc302546412aa5c6e3afdb023163"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "CAUTION: proceed with caution\n",
+        "\n",
+        "deleting the records.*italicized text*"
+      ],
+      "metadata": {
+        "id": "Q7Sqtmbmrz7V"
+      },
+      "id": "Q7Sqtmbmrz7V"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# List the records to be deleted\n",
+        "numRecords = len(dataset.records)\n",
+        "records_to_delete = list(dataset.records[:numRecords])\n",
+        "# Delete the list of records from the dataset\n",
+        "dataset.delete_records(records_to_delete)"
+      ],
+      "metadata": {
+        "id": "6qSWs80vrzIX"
+      },
+      "id": "6qSWs80vrzIX",
+      "execution_count": 53,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -409,7 +517,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "900e963e1f7a4aa5a6d9b0e88120136f": {
+        "43df5cb20c0a4824b66609161a0cedce": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -422,7 +530,7 @@
             "_view_module": "@jupyter-widgets/output",
             "_view_module_version": "1.0.0",
             "_view_name": "OutputView",
-            "layout": "IPY_MODEL_cb0cfc4e535d493cb21128416f285460",
+            "layout": "IPY_MODEL_bf9595a90b774e729585d78369fcbd65",
             "msg_id": "",
             "outputs": [
               {
@@ -436,7 +544,86 @@
             ]
           }
         },
-        "cb0cfc4e535d493cb21128416f285460": {
+        "bf9595a90b774e729585d78369fcbd65": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": null,
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "99cbdc302546412aa5c6e3afdb023163": {
+          "model_module": "@jupyter-widgets/output",
+          "model_name": "OutputModel",
+          "model_module_version": "1.0.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/output",
+            "_model_module_version": "1.0.0",
+            "_model_name": "OutputModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/output",
+            "_view_module_version": "1.0.0",
+            "_view_name": "OutputView",
+            "layout": "IPY_MODEL_76b34f4e76c04c4b93823b466b1dc53a",
+            "msg_id": "",
+            "outputs": [
+              {
+                "output_type": "display_data",
+                "data": {
+                  "text/plain": "Updating records in Argilla... \u001b[38;2;249;38;114m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[38;5;237m╺\u001b[0m \u001b[35m 98%\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Updating records in Argilla... <span style=\"color: #f92672; text-decoration-color: #f92672\">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">╺</span> <span style=\"color: #800080; text-decoration-color: #800080\"> 98%</span> <span style=\"color: #008080; text-decoration-color: #008080\">0:00:01</span>\n</pre>\n"
+                },
+                "metadata": {}
+              }
+            ]
+          }
+        },
+        "76b34f4e76c04c4b93823b466b1dc53a": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
