--- a/Notebooks2023/Argilla_configure_dataset-v1.ipynb
+++ b/Notebooks2023/Argilla_configure_dataset-v1.ipynb
@@ -17,7 +17,22 @@
         "\n",
         "Aaron, Kennedy, Israel, Vishnu.\n",
         "\n",
-        "This notebook configures the dataset."
+        "This notebook configures the dataset.\n",
+        "\n",
+        "Pre-requisites:\n",
+        "the following notebooks are already run:\n",
+        "\n",
+        "1. Create the raw dataset in HF hub.\n",
+        "\n",
+        "2. Manually Create a HF Spaces deployment of Argilla.\n",
+        "\n",
+        "This notebook will Configure the argilla dataset\n",
+        "\n",
+        "and later you need to\n",
+        "\n",
+        "add records in the argilla dataset from the raw dataset\n",
+        "\n",
+        "##annotate the dataset in UI"
       ],
       "metadata": {
         "id": "6kQl8j1Rpc5B"
@@ -45,7 +60,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f808bb22",
-        "outputId": "5b3afc04-c131-440b-c68f-bf10401d27c7"
+        "outputId": "9068040a-2485-48ba-f5da-67d500ba3b9f"
       },
       "outputs": [
         {
@@ -54,10 +69,10 @@
           "text": [
             "Collecting argilla\n",
             "  Downloading argilla-1.21.0-py3-none-any.whl (3.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m14.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m10.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting httpx<=0.25,>=0.15 (from argilla)\n",
             "  Downloading httpx-0.25.0-py3-none-any.whl (75 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.7/75.7 kB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.7/75.7 kB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting deprecated~=1.2.0 (from argilla)\n",
             "  Downloading Deprecated-1.2.14-py2.py3-none-any.whl (9.6 kB)\n",
             "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from argilla) (23.2)\n",
@@ -75,7 +90,7 @@
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<=0.25,>=0.15->argilla) (2023.11.17)\n",
             "Collecting httpcore<0.19.0,>=0.18.0 (from httpx<=0.25,>=0.15->argilla)\n",
             "  Downloading httpcore-0.18.0-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.0/76.0 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.0/76.0 kB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: idna in /usr/local/lib/python3.10/dist-packages (from httpx<=0.25,>=0.15->argilla) (3.6)\n",
             "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from httpx<=0.25,>=0.15->argilla) (1.3.0)\n",
             "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas<2.0.0,>=1.0.0->argilla) (2.8.2)\n",
@@ -87,7 +102,7 @@
             "Requirement already satisfied: anyio<5.0,>=3.0 in /usr/local/lib/python3.10/dist-packages (from httpcore<0.19.0,>=0.18.0->httpx<=0.25,>=0.15->argilla) (3.7.1)\n",
             "Collecting h11<0.15,>=0.13 (from httpcore<0.19.0,>=0.18.0->httpx<=0.25,>=0.15->argilla)\n",
             "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.10/dist-packages (from markdown-it-py>=2.2.0->rich!=13.1.0->argilla) (0.1.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas<2.0.0,>=1.0.0->argilla) (1.16.0)\n",
             "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5.0,>=3.0->httpcore<0.19.0,>=0.18.0->httpx<=0.25,>=0.15->argilla) (1.2.0)\n",
@@ -163,7 +178,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "19c56015",
-        "outputId": "ce669fca-752b-496b-ef57-de9bc767a78d"
+        "outputId": "b440fa73-b51b-4095-cdbf-42d5fa7ff1cc"
       },
       "outputs": [
         {
@@ -208,7 +223,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "96b161c4",
-        "outputId": "d5c69919-7105-4bdf-fb32-93c5e86118cb"
+        "outputId": "37e52dc1-68d2-410f-8dc2-c375ef9cda3f"
       },
       "outputs": [
         {
@@ -328,7 +343,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dc956805",
-        "outputId": "06a5a08e-d48a-48fb-fe41-cc9ffd68b2f8"
+        "outputId": "a0c21e67-de7c-48bc-a7be-4d2f8bce67f1"
       },
       "outputs": [
         {
@@ -337,12 +352,12 @@
           "text": [
             "INFO:argilla.client.feedback.dataset.local.mixins:✓ Dataset succesfully pushed to Argilla\n",
             "INFO:argilla.client.feedback.dataset.local.mixins:RemoteFeedbackDataset(\n",
-            "   id=d5115145-6dc4-4fc5-9b73-92b85a9d4794\n",
+            "   id=2acc2547-7485-4bd2-b1cf-9207be3cdf76\n",
             "   name=my-first-dataset\n",
-            "   workspace=Workspace(id=4313bcb9-d5d2-4889-97c3-0cdcb4772830, name=admin, inserted_at=2023-12-30 16:09:58.983219, updated_at=2023-12-30 16:09:58.983219)\n",
-            "   url=https://vishnuramov-itu-t-build-a-thon.hf.space/dataset/d5115145-6dc4-4fc5-9b73-92b85a9d4794/annotation-mode\n",
-            "   fields=[RemoteTextField(id=UUID('4f5db609-397e-4efc-84e8-5e2b8d6a2368'), client=None, name='prompt', title='Prompt', required=True, type='text', use_markdown=True), RemoteTextField(id=UUID('8921fb44-b264-4d9d-af33-73558814364f'), client=None, name='context', title='Context', required=False, type='text', use_markdown=True)]\n",
-            "   questions=[RemoteTextQuestion(id=UUID('791ff6ce-8f81-419d-8203-7a7c97a0513a'), client=None, name='response', title='Response', description=None, required=True, type='text', use_markdown=True)]\n",
+            "   workspace=Workspace(id=32de92dd-8888-468e-9076-9b3f713c229d, name=admin, inserted_at=2024-01-02 11:29:36.598676, updated_at=2024-01-02 11:29:36.598676)\n",
+            "   url=https://vishnuramov-itu-t-build-a-thon.hf.space/dataset/2acc2547-7485-4bd2-b1cf-9207be3cdf76/annotation-mode\n",
+            "   fields=[RemoteTextField(id=UUID('0c6ad00b-ec11-4e01-a542-4d698eb895d6'), client=None, name='prompt', title='Prompt', required=True, type='text', use_markdown=True), RemoteTextField(id=UUID('899a1396-bf2d-4b48-873d-6f85366e55ba'), client=None, name='context', title='Context', required=False, type='text', use_markdown=True)]\n",
+            "   questions=[RemoteTextQuestion(id=UUID('8e512375-d0e1-49f1-9b81-a3c4b5244228'), client=None, name='response', title='Response', description=None, required=True, type='text', use_markdown=True)]\n",
             "   guidelines=This is a supervised fine-tuning dataset that contains instructions. Please write the response to the instruction in the response field. Take the context into account when writing the response.\n",
             "   metadata_properties=[]\n",
             ")\n"
