--- a/Notebooks2023/Argilla_configure_dataset-v1.ipynb
+++ b/Notebooks2023/Argilla_configure_dataset-v1.ipynb
@@ -60,7 +60,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f808bb22",
-        "outputId": "9068040a-2485-48ba-f5da-67d500ba3b9f"
+        "outputId": "4b7f615a-8947-4bfe-e4d9-3dbc612f86a4"
       },
       "outputs": [
         {
@@ -69,10 +69,10 @@
           "text": [
             "Collecting argilla\n",
             "  Downloading argilla-1.21.0-py3-none-any.whl (3.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m10.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m11.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting httpx<=0.25,>=0.15 (from argilla)\n",
             "  Downloading httpx-0.25.0-py3-none-any.whl (75 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.7/75.7 kB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.7/75.7 kB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting deprecated~=1.2.0 (from argilla)\n",
             "  Downloading Deprecated-1.2.14-py2.py3-none-any.whl (9.6 kB)\n",
             "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from argilla) (23.2)\n",
@@ -90,7 +90,7 @@
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<=0.25,>=0.15->argilla) (2023.11.17)\n",
             "Collecting httpcore<0.19.0,>=0.18.0 (from httpx<=0.25,>=0.15->argilla)\n",
             "  Downloading httpcore-0.18.0-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.0/76.0 kB\u001b[0m \u001b[31m8.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.0/76.0 kB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: idna in /usr/local/lib/python3.10/dist-packages (from httpx<=0.25,>=0.15->argilla) (3.6)\n",
             "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from httpx<=0.25,>=0.15->argilla) (1.3.0)\n",
             "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas<2.0.0,>=1.0.0->argilla) (2.8.2)\n",
@@ -178,7 +178,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "19c56015",
-        "outputId": "b440fa73-b51b-4095-cdbf-42d5fa7ff1cc"
+        "outputId": "884cc331-92ec-4455-bc0a-705064d8456a"
       },
       "outputs": [
         {
@@ -223,7 +223,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "96b161c4",
-        "outputId": "37e52dc1-68d2-410f-8dc2-c375ef9cda3f"
+        "outputId": "22236316-4281-4798-e44c-60bdea6ce668"
       },
       "outputs": [
         {
@@ -263,20 +263,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fvbUooGCsug0",
-        "outputId": "6996c0df-2ae5-4953-b61d-2b803d9ba9ef"
+        "outputId": "10d56814-f3ae-4cc8-b1e2-0cb09ab1f32c"
       },
       "id": "fvbUooGCsug0",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "TextField(name='context', title='Context', required=False, type='text', use_markdown=True)"
+              "TextField(name='prompt', title='Prompt', required=True, type='text', use_markdown=True)"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -336,14 +336,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "id": "dc956805",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dc956805",
-        "outputId": "a0c21e67-de7c-48bc-a7be-4d2f8bce67f1"
+        "outputId": "d71570ae-992f-4f7c-91f7-0509ec5c6135"
       },
       "outputs": [
         {
@@ -352,12 +352,12 @@
           "text": [
             "INFO:argilla.client.feedback.dataset.local.mixins:✓ Dataset succesfully pushed to Argilla\n",
             "INFO:argilla.client.feedback.dataset.local.mixins:RemoteFeedbackDataset(\n",
-            "   id=2acc2547-7485-4bd2-b1cf-9207be3cdf76\n",
-            "   name=my-first-dataset\n",
-            "   workspace=Workspace(id=32de92dd-8888-468e-9076-9b3f713c229d, name=admin, inserted_at=2024-01-02 11:29:36.598676, updated_at=2024-01-02 11:29:36.598676)\n",
-            "   url=https://vishnuramov-itu-t-build-a-thon.hf.space/dataset/2acc2547-7485-4bd2-b1cf-9207be3cdf76/annotation-mode\n",
-            "   fields=[RemoteTextField(id=UUID('0c6ad00b-ec11-4e01-a542-4d698eb895d6'), client=None, name='prompt', title='Prompt', required=True, type='text', use_markdown=True), RemoteTextField(id=UUID('899a1396-bf2d-4b48-873d-6f85366e55ba'), client=None, name='context', title='Context', required=False, type='text', use_markdown=True)]\n",
-            "   questions=[RemoteTextQuestion(id=UUID('8e512375-d0e1-49f1-9b81-a3c4b5244228'), client=None, name='response', title='Response', description=None, required=True, type='text', use_markdown=True)]\n",
+            "   id=42e54058-de08-4dfc-aa45-0a931325642a\n",
+            "   name=fgan-annotate-dataset\n",
+            "   workspace=Workspace(id=6196e1fe-7cc5-4ef4-b608-d98a8bc8fbc8, name=admin, inserted_at=2024-01-02 14:17:38.856061, updated_at=2024-01-02 14:17:38.856061)\n",
+            "   url=https://vishnuramov-itu-t-build-a-thon.hf.space/dataset/42e54058-de08-4dfc-aa45-0a931325642a/annotation-mode\n",
+            "   fields=[RemoteTextField(id=UUID('0f93c28e-34c4-4fa8-954c-bb837668a307'), client=None, name='prompt', title='Prompt', required=True, type='text', use_markdown=True), RemoteTextField(id=UUID('fa4a01bc-b8b9-455a-9bac-ea8a3a05a9a5'), client=None, name='context', title='Context', required=False, type='text', use_markdown=True)]\n",
+            "   questions=[RemoteTextQuestion(id=UUID('f0b1f641-46d7-48bd-ac7e-045dc1ef1e1d'), client=None, name='response', title='Response', description=None, required=True, type='text', use_markdown=True)]\n",
             "   guidelines=This is a supervised fine-tuning dataset that contains instructions. Please write the response to the instruction in the response field. Take the context into account when writing the response.\n",
             "   metadata_properties=[]\n",
             ")\n"
@@ -366,7 +366,7 @@
       ],
       "source": [
         "try:\n",
-        "    remote_dataset= dataset.push_to_argilla(name=\"my-first-dataset\", workspace=\"admin\")\n",
+        "    remote_dataset= dataset.push_to_argilla(name=\"fgan-annotate-dataset\", workspace=\"admin\")\n",
         "except:\n",
         "    pass"
       ]
