--- a/Notebooks2023/Argilla_configure_dataset-v1.ipynb
+++ b/Notebooks2023/Argilla_configure_dataset-v1.ipynb
@@ -17,7 +17,12 @@
         "\n",
         "Aaron, Kennedy, Israel, Vishnu.\n",
         "\n",
-        "This notebook configures the dataset.\n",
+        "Modification History:\n",
+        "\n",
+        "4 Jan 2024:\n",
+        "Aaron, Frank, Othniel, Vishnu: Changed the data schema to a simpler format. Bye-bye \"for_supervised_fine_tuning\" format.\n",
+        "\n",
+        "Description: This notebook configures the dataset.\n",
         "\n",
         "Pre-requisites:\n",
         "the following notebooks are already run:\n",
@@ -28,11 +33,11 @@
         "\n",
         "This notebook will Configure the argilla dataset\n",
         "\n",
-        "and later you need to\n",
+        "//And later you may need to\n",
         "\n",
-        "add records in the argilla dataset from the raw dataset\n",
+        "//add records in the argilla dataset from the raw dataset\n",
         "\n",
-        "##annotate the dataset in UI"
+        "//annotate the dataset in UI"
       ],
       "metadata": {
         "id": "6kQl8j1Rpc5B"
@@ -53,64 +58,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "f808bb22",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f808bb22",
-        "outputId": "4b7f615a-8947-4bfe-e4d9-3dbc612f86a4"
+        "id": "f808bb22"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting argilla\n",
-            "  Downloading argilla-1.21.0-py3-none-any.whl (3.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m11.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting httpx<=0.25,>=0.15 (from argilla)\n",
-            "  Downloading httpx-0.25.0-py3-none-any.whl (75 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.7/75.7 kB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting deprecated~=1.2.0 (from argilla)\n",
-            "  Downloading Deprecated-1.2.14-py2.py3-none-any.whl (9.6 kB)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from argilla) (23.2)\n",
-            "Requirement already satisfied: pandas<2.0.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from argilla) (1.5.3)\n",
-            "Requirement already satisfied: pydantic<2.0,>=1.10.7 in /usr/local/lib/python3.10/dist-packages (from argilla) (1.10.13)\n",
-            "Requirement already satisfied: wrapt<1.15,>=1.13 in /usr/local/lib/python3.10/dist-packages (from argilla) (1.14.1)\n",
-            "Requirement already satisfied: numpy<1.24.0 in /usr/local/lib/python3.10/dist-packages (from argilla) (1.23.5)\n",
-            "Requirement already satisfied: tqdm>=4.27.0 in /usr/local/lib/python3.10/dist-packages (from argilla) (4.66.1)\n",
-            "Collecting backoff (from argilla)\n",
-            "  Downloading backoff-2.2.1-py3-none-any.whl (15 kB)\n",
-            "Collecting monotonic (from argilla)\n",
-            "  Downloading monotonic-1.6-py2.py3-none-any.whl (8.2 kB)\n",
-            "Requirement already satisfied: rich!=13.1.0 in /usr/local/lib/python3.10/dist-packages (from argilla) (13.7.0)\n",
-            "Requirement already satisfied: typer<0.10.0,>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from argilla) (0.9.0)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<=0.25,>=0.15->argilla) (2023.11.17)\n",
-            "Collecting httpcore<0.19.0,>=0.18.0 (from httpx<=0.25,>=0.15->argilla)\n",
-            "  Downloading httpcore-0.18.0-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.0/76.0 kB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: idna in /usr/local/lib/python3.10/dist-packages (from httpx<=0.25,>=0.15->argilla) (3.6)\n",
-            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from httpx<=0.25,>=0.15->argilla) (1.3.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas<2.0.0,>=1.0.0->argilla) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas<2.0.0,>=1.0.0->argilla) (2023.3.post1)\n",
-            "Requirement already satisfied: typing-extensions>=4.2.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<2.0,>=1.10.7->argilla) (4.5.0)\n",
-            "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.10/dist-packages (from rich!=13.1.0->argilla) (3.0.0)\n",
-            "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /usr/local/lib/python3.10/dist-packages (from rich!=13.1.0->argilla) (2.16.1)\n",
-            "Requirement already satisfied: click<9.0.0,>=7.1.1 in /usr/local/lib/python3.10/dist-packages (from typer<0.10.0,>=0.6.0->argilla) (8.1.7)\n",
-            "Requirement already satisfied: anyio<5.0,>=3.0 in /usr/local/lib/python3.10/dist-packages (from httpcore<0.19.0,>=0.18.0->httpx<=0.25,>=0.15->argilla) (3.7.1)\n",
-            "Collecting h11<0.15,>=0.13 (from httpcore<0.19.0,>=0.18.0->httpx<=0.25,>=0.15->argilla)\n",
-            "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.10/dist-packages (from markdown-it-py>=2.2.0->rich!=13.1.0->argilla) (0.1.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas<2.0.0,>=1.0.0->argilla) (1.16.0)\n",
-            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5.0,>=3.0->httpcore<0.19.0,>=0.18.0->httpx<=0.25,>=0.15->argilla) (1.2.0)\n",
-            "Installing collected packages: monotonic, h11, deprecated, backoff, httpcore, httpx, argilla\n",
-            "Successfully installed argilla-1.21.0 backoff-2.2.1 deprecated-1.2.14 h11-0.14.0 httpcore-0.18.0 httpx-0.25.0 monotonic-1.6\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install argilla"
       ]
@@ -178,7 +131,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "19c56015",
-        "outputId": "884cc331-92ec-4455-bc0a-705064d8456a"
+        "outputId": "7a4f4526-8182-4544-fb03-24e9309bcb7a"
       },
       "outputs": [
         {
@@ -209,9 +162,7 @@
         "id": "4146f0d7"
       },
       "source": [
-        "### Use a Task Template\n",
-        "\n",
-        "Argilla offers a set of [pre-defined templates for different tasks](https://docs.argilla.io/en/latest/practical_guides/create_update_dataset/create_dataset.html#task-templates). You can use them to configure your dataset straightforward. For instance, if you want to create a dataset for simple text classification, you can use the following code:"
+        "### Use a Custom Template\n"
       ]
     },
     {
@@ -223,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "96b161c4",
-        "outputId": "22236316-4281-4798-e44c-60bdea6ce668"
+        "outputId": "40e98640-a1a9-4ba5-d06f-c937c2b28c34"
       },
       "outputs": [
         {
@@ -231,9 +182,9 @@
           "data": {
             "text/plain": [
               "FeedbackDataset(\n",
-              "   fields=[TextField(name='prompt', title='Prompt', required=True, type='text', use_markdown=True), TextField(name='context', title='Context', required=False, type='text', use_markdown=True)]\n",
-              "   questions=[TextQuestion(name='response', title='Response', description='Write the response to the instruction.', required=True, type='text', use_markdown=True)]\n",
-              "   guidelines=This is a supervised fine-tuning dataset that contains instructions. Please write the response to the instruction in the response field. Take the context into account when writing the response.)\n",
+              "   fields=[TextField(name='background', title='Background', required=True, type='text', use_markdown=False), TextField(name='prompt', title='Prompt', required=True, type='text', use_markdown=False), TextField(name='response', title='Final Response', required=True, type='text', use_markdown=False)]\n",
+              "   questions=[TextQuestion(name='response_correction', title='Response_correction', description='If you think the response is not accurate, please, correct it.', required=True, type='text', use_markdown=False)]\n",
+              "   guidelines=Please, read the question carefully and try to answer it as accurately as possible.)\n",
               "   metadata_properties=[])\n",
               ")"
             ]
@@ -243,107 +194,35 @@
         }
       ],
       "source": [
-        "dataset = rg.FeedbackDataset.for_supervised_fine_tuning(\n",
-        "    context=True,\n",
-        "    use_markdown=True,\n",
-        "    guidelines=None,\n",
-        "    metadata_properties=None,\n",
-        "    vectors_settings=None,\n",
+        "#Create a custom dataset configuration\n",
+        "custom_dataset = rg.FeedbackDataset(\n",
+        "    fields = [\n",
+        "        rg.TextField(name=\"background\"),\n",
+        "        rg.TextField(name=\"prompt\"),\n",
+        "        rg.TextField(name=\"response\", title=\"Final Response\"),\n",
+        "    ],\n",
+        "    questions=[\n",
+        "        rg.TextQuestion(\n",
+        "            name=\"response_correction\",\n",
+        "            description=\"If you think the response is not accurate, please, correct it.\",\n",
+        "            required=True,\n",
+        "        ),\n",
+        "    ],\n",
+        "    guidelines=\"Please, read the question carefully and try to answer it as accurately as possible.\"\n",
         ")\n",
-        "dataset\n"
+        "custom_dataset\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dataset.field_by_name(\"prompt\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fvbUooGCsug0",
-        "outputId": "10d56814-f3ae-4cc8-b1e2-0cb09ab1f32c"
-      },
-      "id": "fvbUooGCsug0",
       "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "TextField(name='prompt', title='Prompt', required=True, type='text', use_markdown=True)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dataset.field_by_name(\"context\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "W-UB-2uGt4CJ",
-        "outputId": "adccc9b3-4415-4061-8f81-aca0bca8139a"
-      },
-      "id": "W-UB-2uGt4CJ",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "TextField(name='context', title='Context', required=False, type='text', use_markdown=True)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dataset.question_by_name(\"response\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DxqdAN82t5jl",
-        "outputId": "9ee02892-7c47-4bee-eeca-bae327038c80"
-      },
-      "id": "DxqdAN82t5jl",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "TextQuestion(name='response', title='Response', description='Write the response to the instruction.', required=True, type='text', use_markdown=True)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
       "id": "dc956805",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dc956805",
-        "outputId": "d71570ae-992f-4f7c-91f7-0509ec5c6135"
+        "outputId": "ba82450c-952c-4d96-a1fe-c92c3417daee"
       },
       "outputs": [
         {
@@ -352,13 +231,13 @@
           "text": [
             "INFO:argilla.client.feedback.dataset.local.mixins:✓ Dataset succesfully pushed to Argilla\n",
             "INFO:argilla.client.feedback.dataset.local.mixins:RemoteFeedbackDataset(\n",
-            "   id=42e54058-de08-4dfc-aa45-0a931325642a\n",
+            "   id=9d63097e-8e18-4341-b446-64f59a8e2759\n",
             "   name=fgan-annotate-dataset\n",
             "   workspace=Workspace(id=6196e1fe-7cc5-4ef4-b608-d98a8bc8fbc8, name=admin, inserted_at=2024-01-02 14:17:38.856061, updated_at=2024-01-02 14:17:38.856061)\n",
-            "   url=https://vishnuramov-itu-t-build-a-thon.hf.space/dataset/42e54058-de08-4dfc-aa45-0a931325642a/annotation-mode\n",
-            "   fields=[RemoteTextField(id=UUID('0f93c28e-34c4-4fa8-954c-bb837668a307'), client=None, name='prompt', title='Prompt', required=True, type='text', use_markdown=True), RemoteTextField(id=UUID('fa4a01bc-b8b9-455a-9bac-ea8a3a05a9a5'), client=None, name='context', title='Context', required=False, type='text', use_markdown=True)]\n",
-            "   questions=[RemoteTextQuestion(id=UUID('f0b1f641-46d7-48bd-ac7e-045dc1ef1e1d'), client=None, name='response', title='Response', description=None, required=True, type='text', use_markdown=True)]\n",
-            "   guidelines=This is a supervised fine-tuning dataset that contains instructions. Please write the response to the instruction in the response field. Take the context into account when writing the response.\n",
+            "   url=https://vishnuramov-itu-t-build-a-thon.hf.space/dataset/9d63097e-8e18-4341-b446-64f59a8e2759/annotation-mode\n",
+            "   fields=[RemoteTextField(id=UUID('1afd1754-1dc6-48a8-951f-b7f37ce8e270'), client=None, name='background', title='Background', required=True, type='text', use_markdown=False), RemoteTextField(id=UUID('0de91bf8-000a-4393-9f40-0aa775fb89a8'), client=None, name='prompt', title='Prompt', required=True, type='text', use_markdown=False), RemoteTextField(id=UUID('f8e4f450-f39d-4761-a899-18fe65dabfd8'), client=None, name='response', title='Final Response', required=True, type='text', use_markdown=False)]\n",
+            "   questions=[RemoteTextQuestion(id=UUID('75262994-2509-444b-ab61-039783bb86ae'), client=None, name='response_correction', title='Response_correction', description=None, required=True, type='text', use_markdown=False)]\n",
+            "   guidelines=Please, read the question carefully and try to answer it as accurately as possible.\n",
             "   metadata_properties=[]\n",
             ")\n"
           ]
@@ -366,7 +245,7 @@
       ],
       "source": [
         "try:\n",
-        "    remote_dataset= dataset.push_to_argilla(name=\"fgan-annotate-dataset\", workspace=\"admin\")\n",
+        "    remote_dataset= custom_dataset.push_to_argilla(name=\"fgan-annotate-dataset\", workspace=\"admin\")\n",
         "except:\n",
         "    pass"
       ]
