--- a/Notebooks2023/Argilla_add_records_dataset-v1.ipynb
+++ b/Notebooks2023/Argilla_add_records_dataset-v1.ipynb
@@ -267,7 +267,7 @@
         "id": "t0F8WUnldXYZ"
       },
       "id": "t0F8WUnldXYZ",
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -280,15 +280,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 33,
           "referenced_widgets": [
-            "6c0a9df172f94b95b02ed5caa99aacb8",
-            "004ee5e9fa29430f8f522e0eaca9ae73"
+            "4afbcd50b00647aa967165fcdb0a23b8",
+            "9b85cba7dae24c3f8eeb20d9c2a70f3b"
           ]
         },
         "id": "Et1HY8eWo2l5",
-        "outputId": "076609d6-f0bb-44e2-b7b2-aaec6c193d87"
+        "outputId": "431d91fd-243f-43b0-d041-7d5a8d026373"
       },
       "id": "Et1HY8eWo2l5",
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -299,7 +299,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "6c0a9df172f94b95b02ed5caa99aacb8"
+              "model_id": "4afbcd50b00647aa967165fcdb0a23b8"
             }
           },
           "metadata": {}
@@ -438,7 +438,7 @@
         "id": "6qSWs80vrzIX"
       },
       "id": "6qSWs80vrzIX",
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -560,7 +560,7 @@
             "width": null
           }
         },
-        "6c0a9df172f94b95b02ed5caa99aacb8": {
+        "4afbcd50b00647aa967165fcdb0a23b8": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -573,21 +573,21 @@
             "_view_module": "@jupyter-widgets/output",
             "_view_module_version": "1.0.0",
             "_view_name": "OutputView",
-            "layout": "IPY_MODEL_004ee5e9fa29430f8f522e0eaca9ae73",
+            "layout": "IPY_MODEL_9b85cba7dae24c3f8eeb20d9c2a70f3b",
             "msg_id": "",
             "outputs": [
               {
                 "output_type": "display_data",
                 "data": {
-                  "text/plain": "Pushing records to Argilla... \u001b[38;2;249;38;114m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[38;5;237m╺\u001b[0m \u001b[35m 98%\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
-                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Pushing records to Argilla... <span style=\"color: #f92672; text-decoration-color: #f92672\">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">╺</span> <span style=\"color: #800080; text-decoration-color: #800080\"> 98%</span> <span style=\"color: #008080; text-decoration-color: #008080\">0:00:01</span>\n</pre>\n"
+                  "text/plain": "Pushing records to Argilla... \u001b[38;2;249;38;114m━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[38;5;237m╺\u001b[0m\u001b[38;5;237m━━━━━━━━━━━━━\u001b[0m \u001b[35m 65%\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Pushing records to Argilla... <span style=\"color: #f92672; text-decoration-color: #f92672\">━━━━━━━━━━━━━━━━━━━━━━━━━━</span><span style=\"color: #3a3a3a; text-decoration-color: #3a3a3a\">╺━━━━━━━━━━━━━</span> <span style=\"color: #800080; text-decoration-color: #800080\"> 65%</span> <span style=\"color: #008080; text-decoration-color: #008080\">0:00:01</span>\n</pre>\n"
                 },
                 "metadata": {}
               }
             ]
           }
         },
-        "004ee5e9fa29430f8f522e0eaca9ae73": {
+        "9b85cba7dae24c3f8eeb20d9c2a70f3b": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
